--- a/authentication.html
+++ b/authentication.html
@@ -2,26 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoMore Store</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>SoMore Store</title>
 
-    <!-- Font -->
+	<!-- Font -->
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!-- CSS file -->
-    <!-- <link rel="stylesheet" href="assets/css/base.css">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+	<link rel="stylesheet" href="/fonts/icomoon/style.css">
+	<!-- CSS file -->
+	<!-- <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/main.css"> -->
-    <link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="css/login.css">
 
-    <script src="js/login.js"></script>
+	<script src="js/login.js"></script>
 	<style>
 		body {
 			background-image: url(img/login/pexels-mnz-1598505.jpg);
 			background-size: cover;
+		}
+
+		.btn.btn-google {
+			background: #ea4335;
+			color: #fff;
+		}
+
+		.btn {
+			padding: 14px 0;
+			text-decoration: none !important;
 		}
 	</style>
 </head>
@@ -49,51 +60,65 @@
 						<div class="panel-body">
 							<div class="row">
 								<div class="col-lg-12">
-									<form id="login-form" action="https://phpoll.com/login/process" method="post" role="form" style="display: block;">
+									<form id="login-form" action="https://phpoll.com/login/process" method="post"
+										role="form" style="display: block;">
 										<div class="form-group">
-											<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Email/Số điện thoại/Tên đăng nhập" value="">
+											<input type="text" name="username" id="username" tabindex="1"
+												class="form-control" placeholder="Email/Số điện thoại/Tên đăng nhập"
+												value="">
 										</div>
 										<div class="form-group">
-											<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Mật khẩu">
+											<input type="password" name="password" id="password" tabindex="2"
+												class="form-control" placeholder="Mật khẩu">
 										</div>
-										<div class="form-group text-center">
+										<div class="form-group">
+											
 											<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
 											<label for="remember"> Remember Me</label>
+											<a href="https://phpoll.com/recover" tabindex="5"
+											class="forgot-password" style="position: absolute; right: 15px; ">Quên mật khẩu?</a>
 										</div>
 										<div class="form-group">
 											<div class="row">
 												<div class="col-sm-6 col-sm-offset-3">
-													<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Đăng nhập">
+													<input type="submit" name="login-submit" id="login-submit"
+														tabindex="4" class="form-control btn btn-login"
+														value="Đăng nhập">
+													<p style="text-align: center; margin:10px 0;">Or</p>
+													<a href="#" class="btn btn-block py-2 btn-google"><span
+															class="icon-google mr-3"></span> Đăng nhập bằng Google</a>
 												</div>
+
 											</div>
 										</div>
-										<div class="form-group">
-											<div class="row">
-												<div class="col-lg-12">
-													<div class="text-center">
-														<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Quên mật khẩu?</a>
-													</div>
-												</div>
-											</div>
-										</div>
+
+										
 									</form>
-									<form id="register-form" action="https://phpoll.com/register/process" method="post" role="form" style="display: none;">
+
+									<form id="register-form" action="https://phpoll.com/register/process" method="post"
+										role="form" style="display: none;">
 										<div class="form-group">
-											<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Tên đăng nhập" value="">
+											<input type="text" name="username" id="username" tabindex="1"
+												class="form-control" placeholder="Tên đăng nhập" value="">
 										</div>
 										<div class="form-group">
-											<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email của bạn" value="">
+											<input type="email" name="email" id="email" tabindex="1"
+												class="form-control" placeholder="Email của bạn" value="">
 										</div>
 										<div class="form-group">
-											<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Mật khẩu">
+											<input type="password" name="password" id="password" tabindex="2"
+												class="form-control" placeholder="Mật khẩu">
 										</div>
 										<div class="form-group">
-											<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Nhập lại mật khẩu">
+											<input type="password" name="confirm-password" id="confirm-password"
+												tabindex="2" class="form-control" placeholder="Nhập lại mật khẩu">
 										</div>
 										<div class="form-group">
 											<div class="row">
 												<div class="col-sm-6 col-sm-offset-3">
-													<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Đăng ký">
+													<input type="submit" name="register-submit" id="register-submit"
+														tabindex="4" class="form-control btn btn-register"
+														value="Đăng ký">
 												</div>
 											</div>
 										</div>
@@ -107,4 +132,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
